# EasyRes

./: .gitignore  200.html  404.html  LICENSE  asset-manifest.json  index.html  manifest.json  package-lock.json  package.json  robots.txt
EasyResBackEnd/: Cargo.toml
EasyResBackEnd/configs/: local.json
EasyResBackEnd/src/: error.rs  lib.rs  main.rs
EasyResBackEnd/src/config/: builder.rs  mod.rs
EasyResBackEnd/src/firebase/: client.rs
EasyResBackEnd/src/models/: user.rs
EasyResBackEnd/src/routes/: handler.rs  mod.rs  restaurant.rs  user.rs
EasyResBackEnd/src/services/: user.rs
EasyResBackEnd/src/updown/: startup.rs
easy-res-server/: Cargo.toml
easy-res-server/configs/: local.json
easy-res-server/src/: error.rs  lib.rs  main.rs
easy-res-server/src/config/: builder.rs  mod.rs
easy-res-server/src/dtos/: mod.rs
easy-res-server/src/dtos/restaurant/: create_restaurant_dto.rs  mod.rs
easy-res-server/src/dtos/user/: create_user_dto.rs  mod.rs  update_user_dto.rs
easy-res-server/src/firebase/: client.rs
easy-res-server/src/models/: mod.rs  restaurant.rs  user.rs
easy-res-server/src/routes/: handler.rs  restaurant.rs  user.rs
easy-res-server/src/services/: user.rs
easy-res-server/src/updown/: startup.rs
public/: 404.html  index.html  manifest.json
src/: App.js  index.js
src/components/: Calendar.js  CalendarYearly.js  Debug.js  DropdownMenu.js  Login.js  MapComponent.js  Order.js  Reservations.js  Reserve.js  ReserveTable.js  SamplePage.jsx  dbConfiguration.js  dbData.js  dbDate.js  dbUsers.js  firebase.utils.js  reservations_data.js
src/styles/: Calendar.css  CalendarYearly.css  DropdownMenu.css  Login.css  MapComponent.css  Order.css  Reservations.css  Reserve.css  ReserveTable.css  global.css
static/js/: main.2041a61c.js  (+11 more)
(+2 files in other folders)
