[package]
name = "easy-res-server"
version = "0.1.0"
edition = "2021"
default-run = "easy-res-server"

[dependencies]
axum = "0.6"               # Axum web framework
tokio = { version = "1", features = ["full"] } # Async runtime
serde = { version = "1", features = ["derive"] } # Serialization/deserialization
serde_json = "1.0"         # For handling JSON
tower = "0.4"
thiserror = "1.0.64"
config = "0.14.0"              # Middleware and utilities for Axum
once_cell = "1"
tracing = "0.1"             # For structured logging

http = "0.2.8"
bytes = "1.2.1"
http-body = "0.4.5"
tracing-subscriber = "0.3.18"
hyper = "0.14.30"

tower-http = { version = "0.3", features = ["trace"] }
tower-request-id = "0.2.0"

chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }


firebase-rs = "2.0.5"
reqwest = { version = "0.11", features = ["json"] }